--- a/Livestreamer Twitch Viewer/MainWindow.xaml
+++ b/Livestreamer Twitch Viewer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Livestreamer_Twitch_Viewer.MainWindow"
+﻿<Window  x:Class="Livestreamer_Twitch_Viewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="300" Width="300">
     <StackPanel x:Name="grid1">
-        <Button x:Name="button2" Content="Login" HorizontalAlignment="Center" Margin="0,25,0,0" Width="200" RenderTransformOrigin="-0.013,-1" Height="60" Click="button2_Click" VerticalAlignment="Top"/>
-        <Button x:Name="button1" Content="Generate Key" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Center" Width="200" Height="60" Click="button1_Click"/>
-        <Button x:Name="button3" Content="Instal Livestreamer" HorizontalAlignment="Center" Margin="0,20,0,30" VerticalAlignment="Top" Width="200" RenderTransformOrigin="-0.013,-1" Height="60" Click="button3_Click"/>
+        <Button x:Name="button2" Content="Login" HorizontalAlignment="Center" Margin="0,25,0,0" Width="200" RenderTransformOrigin="-0.013,-1" Height="60" Click="button2_Click" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+        <Button x:Name="button1" Content="Generate Key" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Center" Width="200" Height="60" Click="button1_Click" FontWeight="Bold" FontSize="16"/>
+        <Button x:Name="button3" Content="Instal Livestreamer" HorizontalAlignment="Center" Margin="0,20,0,30" VerticalAlignment="Top" Width="200" RenderTransformOrigin="-0.013,-1" Height="60" Click="button3_Click" FontWeight="Bold" FontSize="16"/>
     </StackPanel>
 </Window>
